# assignment1

project-port/projects/Lighting/: CMakeLists.txt  LICENSE  README.md  authors.txt
project-port/projects/Lighting/code/: GraphicsGlue.cc  GraphicsGlue.h  GraphicsNode.cc  GraphicsNode.h  InputHandler.h  LightNode.cc  LightNode.h  MathLib.cc  MathLib.h  MeshResource.h  ResourceBase.h  ShaderResource.h  TextureResource.h  exampleapp.cc  exampleapp.h  main.cc
project-port/projects/Lighting/docs/html/: annotated.html  annotated_dup.js  class_vec4-members.html  class_vec4.html  class_vec4.js  classes.html  dir_050edd66366d13764f98250ef6db77f6.html  dir_050edd66366d13764f98250ef6db77f6.js  dir_410db1b7e91d2163e57b1881913dac28.html  dir_410db1b7e91d2163e57b1881913dac28.js  dir_a9ec1ef424966475f993eb98877e3088.html  dir_a9ec1ef424966475f993eb98877e3088.js  dir_ab639345bd3627dcf8c625207a765bd3.html  dir_ab639345bd3627dcf8c625207a765bd3.js  files.html  functions.html  functions_func.html  index.html  matlib_8h.html  matlib_8h_source.html  navtreedata.js  navtreeindex0.js
project-port/projects/Lighting/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  (+6 more)
project-port/projects/Lighting/docs/latex/: annotated.tex  class_vec4.tex  files.tex  matlib_8h.tex  refman.tex
project-port/projects/Lighting/resources/: bfong.glsl  blinnphong.glsl  cube.mtl  hare.mtl  shadeless.glsl  shader.glsl
simple-linux-app/: CMakeLists.txt  README.md  compile.sh
simple-linux-app/src/: main.cpp
(+10 files in other folders)
