PROJECT(SIMPLE_PROGRAM_ENV)
CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

if(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -no-pie")
ENDIF()

FILE(GLOB SIMPLE_PROGRAM_HEADERS src/*hpp)
FILE(GLOB SIMPLE_PROGRAM_SOURCES src/*cpp)

SET(FILES_SIMPLE_PROGRAM_ENV ${SIMPLE_PROGRAM_HEADERS} ${SIMPLE_PROGRAM_SOURCES})
SOURCE_GROUP("SIMPLE_PROGRAM_ENV" FILES ${FILES_SIMPLE_PROGRAM_ENV})


SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/)

ADD_EXECUTABLE(SIMPLE_PROGRAM_ENV ${FILES_SIMPLE_PROGRAM_ENV})
